# programming_2025

1 семестр (лабы)/lab1/: CMakeLists.txt
1 семестр (лабы)/lab3/: lab3.cpp
1 семестр (лабы)/lab4/: lab4.cpp
1 семестр (лабы)/lab5/: lab5.cpp
1 семестр (лабы)/lab6/: lab6.cpp
1 семестр (лабы)/lab7/: CMakeLists.txt  lab7.cpp
1 симестр (лабы)/lab4/: CMakeLists.txt
2 семестр (лабы)/lab1/: lab1.cpp
2 семестр (лабы)/lab2/: CMakeLists.txt  Car.cpp  Car.h  lab2.cpp
2 семестр (лабы)/lab3/: AutoWorkshop.cpp  AutoWorkshop.hpp  CMakeLists.txt  Car.cpp  Car.h  Radio.cpp  Radio.hpp  lab3.cpp
2 семестр (лабы)/lab3/include/: AutoWorkshop.hpp  Radio.hpp
2 семестр (лабы)/lab3/src/: AutoWorkshop.cpp  Radio.cpp
2 семестр (лабы)/lab4/: CMakeLists.txt  ResultData.cpp  ResultData.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
2 семестр (лабы)/lab5/: Armor.h  CMakeLists.txt  Enemy.cpp  Enemy.h  InfoDialog.cpp  InfoDialog.h  InfoDialog.ui  Magician.cpp  Magician.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NPC.cpp  NPC.h  data.txt  data_n.txt
2 семестр (лабы)/lab6/: data.txt
2 семестр (лабы)/lab6/program1/: CMakeLists.txt  main1.cpp  shield_creator.cpp  shield_creator.h  shield_creator.ui
2 семестр (лабы)/lab6/program2/: CMakeLists.txt  main2.cpp  shield_viewer.cpp  shield_viewer.h  shield_viewer.ui
2 семестр (лабы)/strings/: CMakeLists.txt  input.txt  strings.cpp  text.txt
2 симестр (лабы)/lab1/: lab1.cpp
2 симестр (лабы)/lab2/: Car.cpp  lab2.cpp
lab1/: CMakeLists.txt  lab1.cpp
lab2/: CMakeLists.txt  lab2.cpp
lab3/: CMakeLists.txt  lab3.cpp
lab4/: lab4.cpp
lab5/: CMakeLists.txt  lab5.cpp
lab6/: CMakeLists.txt  lab6.cpp
lab7/: lab7.cpp
lab8/: CMakeLists.txt  lab8.cpp
lecture01_basics/: CMakeLists.txt
lecture03/: CMakeLists.txt  m.cpp
lecture04/: CMakeLists.txt  m.cpp
lecture05/: CMakeLists.txt  m2.cpp
lecture07/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
lecture08/: CMakeLists.txt  main.cpp
lecture09/: CMakeLists.txt
lecture10/: CMakeLists.txt  main.cpp
lecture12/: CMakeLists.txt  main.cpp
lecture15/: CMakeLists.txt  main.cpp
